--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ footer {padding:20px; text-align:center; background:#000; color:#ff85a2; font-we
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>تتو پارسا عزیزی</title>
+  <title>خاله مریم و مامان آرش</title>
 
   <!-- اینجا فونت‌ها و CSS -->
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;700&display=swap" rel="stylesheet">
@@ -100,9 +100,7 @@ footer {padding:20px; text-align:center; background:#000; color:#ff85a2; font-we
 <section id="portfolio" class="active">
   <h2>نمونه کارها</h2>
   <div class="gallery" id="gallery">
-    <img src="https://github.com/uniformitarianismreal-star/TATTOO-PARSA/blob/main/IMG_20250825_111019_587.jpg" alt="نمونه کار 1">
-    <img src="IMG_20250820_132705_780.jpg" alt="نمونه کار 2">
-    <img src="IMG_20250825_111019_587.jpg" alt="نمونه کار 3">
+    <img src="https://github.com/7-star/TATTOO-PARSA/blob/main/IMG_20250825_111019_587.jpg" alt="صادق ریخت تو مامانم">
   </div>
   <div class="character">
     
@@ -110,7 +108,7 @@ footer {padding:20px; text-align:center; background:#000; color:#ff85a2; font-we
 
 <section id="about">
   <h2>درباره من</h2>
-  <p>سلام! من پارسام و اینجا میتونید نمونه کارهای منو ببینید.</p>
+  <p>سلام! من مریم پشوییم و میتونی سکسامو اینجا ببینید.</p>
   <div class="character">
   </div>
 </section>
