--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
 
 <section id="about">
     <h2>درباره من</h2>
-    <p class="fade-in">سلام، من آفرودون هستم. <br>
-    شماره تماس: <a href="tel:+989123456789">+98 912 345 6789</a><br>
-    ایمیل: <a href="mailto:example@gmail.com">example@gmail.com</a><br>
-    من یک تتو آرتیست حرفه‌ای هستم و عاشق خلق آثار هنری خاص و شخصی برای مشتریانم.</p>
+    <p class="fade-in">پارسا عزیزی. <br>
+    شماره تماس: <a href="tel:"09927991430">+989927991430</a><br>
+    ایمیل: <a href="Astroparsa979@gmail.com">example@gmail.com</a><br>
+        من پارسام و میخوام هنرم رو با شما به اشتراک بزارم .</p>
 </section>
 
 <!-- overlay برای زوم تصاویر -->
