--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <h2>درباره من</h2>
     <p class="fade-in">پارسا عزیزی. <br>
     شماره تماس: <a href="tel:"09927991430">+989927991430</a><br>
-    ایمیل: <a href="Astroparsa979@gmail.com">example@gmail.com</a><br>
+    ایمیل: <a href="Astroparsa979@gmail.com">astroparsa979@gmail.com</a><br>
         من پارسام و میخوام هنرم رو با شما به اشتراک بزارم .</p>
 </section>
 
