--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <h2>نمونه کارها</h2>
     <div class="gallery">
         <div class="image-card fade-in"><img src="IMG_20250825_111019_587.jpg" alt="نمونه کار 1"></div>
-        <div class="image-card fade-in"><img src="tattoo2.jpg" alt="نمونه کار 2"></div>
+        <div class="image-card fade-in"><img src="IMG_20250825_111019_587.jpg" alt="نمونه کار 2"></div>
         <div class="image-card fade-in"><img src="tattoo3.jpg" alt="نمونه کار 3"></div>
     </div>
 </section>
