--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <div class="gallery">
         <div class="image-card fade-in"><img src="IMG_20250825_111019_587.jpg" alt="نمونه کار 1"></div>
         <div class="image-card fade-in"><img src="IMG_20250825_111019_587.jpg" alt="نمونه کار 2"></div>
-        <div class="image-card fade-in"><img src="tattoo3.jpg" alt="نمونه کار 3"></div>
+        <div class="image-card fade-in"><img src="InShot_20250818_215950717.jpg" alt="نمونه کار 3"></div>
     </div>
 </section>
 
