--- a/index.html
+++ b/index.html
@@ -180,8 +180,24 @@
 <section id="styles">
     <h2>سبک‌های تتو</h2>
     <div>
-        <h3 class="fade-in">بلک ورک</h3>
-        <p class="fade-in">توضیح کامل درباره سبک بلک ورک...</p>
+        <h3 class="fade-in">دات و‌ُرک </h3>
+        <p class="fade-in"> 
+
+
+
+سبک دات‌ورک یکی از خاص‌ترین و چشم‌گیرترین سبک‌های تتو است که در آن طرح‌ها نه با خطوط پیوسته، بلکه با نقطه‌گذاری‌های متوالی شکل می‌گیرند. در این روش، هنرمند به‌جای کشیدن خط یا سایه مستقیم، با قرار دادن نقطه‌های ریز و درشت در کنار هم، حجم، سایه‌روشن و بافت ایجاد می‌کند.
+
+این سبک معمولاً برای طراحی‌های ماندالا، هندسی، مذهبی، گل و گیاه، و حتی پرتره‌های خاص استفاده می‌شود. دقت و حوصله‌ی تتوآرتیست در این روش اهمیت زیادی دارد، چون زیبایی نهایی طرح به هماهنگی و تراکم نقطه‌ها بستگی دارد.
+
+یکی از جذابیت‌های بزرگ دات‌ورک این است که به تتو عمق و حالت سه‌بعدی می‌دهد، بدون آنکه از رنگ‌های متنوع یا سایه‌زنی‌های پیچیده استفاده شود. به همین دلیل، اغلب آثار این سبک سیاه و خاکستری هستند و جلوه‌ای مینیمال، تمیز و در عین حال بسیار هنری دارند.
+
+از نظر درد، چون سوزن به‌صورت مداوم و تکراری روی پوست ضربه می‌زند، تتوی دات‌ورک می‌تواند برای برخی افراد کمی دردناک‌تر از سبک‌های ساده‌تر باشد. با این حال میزان درد کاملاً به محل تتو و آستانه تحمل فرد بستگی دارد.
+
+از نظر زمان اجرا هم دات‌ورک معمولاً طولانی‌تر است، چون ایجاد حجم و سایه با نقطه‌گذاری زمان بیشتری نسبت به کشیدن خطوط یا سایه‌زنی عادی می‌برد. بنابراین طرح‌های بزرگ در این سبک ممکن است نیاز به چند جلسه تتو داشته باشند.
+
+---
+
+ ...</p>
         <h3 class="fade-in">آبرنگ</h3>
         <p class="fade-in">توضیح کامل درباره سبک آبرنگ...</p>
         <h3 class="fade-in">رئال</h3>
