--- a/untitled.html
+++ b/untitled.html
@@ -1,10 +1,21 @@
 <style>
-img.zoom {
-  transition: transform 0.4s ease;
-}
-img.zoom:hover {
-  transform: scale(1.2);
+.cursor {
+  position: fixed;
+  width: 10px;
+  height: 10px;
+  background: #ff0055;
+  border-radius: 50%;
+  pointer-events: none;
+  mix-blend-mode: difference;
+  transform: translate(-50%, -50%);
 }
 </style>
+<div class="cursor"></div>
 
-<img src="tattoo.jpg" class="zoom" width="300">
+<script>
+const cursor = document.querySelector(".cursor");
+document.addEventListener("mousemove", e => {
+  cursor.style.left = e.pageX + "px";
+  cursor.style.top = e.pageY + "px";
+});
+</script>
