--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
 از نظر درد، چون سوزن به‌صورت مداوم و تکراری روی پوست ضربه می‌زند، تتوی دات‌ورک می‌تواند برای برخی افراد کمی دردناک‌تر از سبک‌های ساده‌تر باشد. با این حال میزان درد کاملاً به محل تتو و آستانه تحمل فرد بستگی دارد.
 
 از نظر زمان اجرا هم دات‌ورک معمولاً طولانی‌تر است، چون ایجاد حجم و سایه با نقطه‌گذاری زمان بیشتری نسبت به کشیدن خطوط یا سایه‌زنی عادی می‌برد. بنابراین طرح‌های بزرگ در این سبک ممکن است نیاز به چند جلسه تتو داشته باشند.
-
----
+<div class="image-card fade-in"><img src="InShot_20250902_215125379.jpg" alt="نمونه کار 2"></div>
+____________________
 
  ...</p>
         <h3 class="fade-in">آبرنگ</h3>
