--- a/index.html
+++ b/index.html
@@ -198,8 +198,16 @@
 ____________________
 
  ...</p>
-        <h3 class="fade-in">آبرنگ</h3>
-        <p class="fade-in">توضیح کامل درباره سبک آبرنگ...</p>
+        <h3 class="fade-in">آبرنگی</h3>
+        
+        <p class="fade-in">سبک آبرنگی یا  یکی از سبک‌های مدرن تتو است که در آن طرح شبیه نقاشی آبرنگ روی کاغذ به نظر می‌رسد. در این سبک خبری از خطوط تیز و پررنگ نیست، بلکه رنگ‌ها به صورت محو، شفاف و پخش‌شده روی پوست اجرا می‌شوند. مرز رنگ‌ها معمولاً مشخص نیست و همین باعث می‌شود طرح جلوه‌ای لطیف، هنری و آزاد داشته باشد. رنگ‌های روشن مثل آبی، صورتی، بنفش، سبز و زرد در این سبک بسیار پرکاربرد هستند و اغلب با هم ترکیب می‌شوند تا حس پاشیدن یا پخش شدن رنگ را منتقل کنند.
+
+این نوع تتو می‌تواند بدون خط مشکی یا همراه با کانتور ظریف اجرا شود، اما در هر صورت هویت اصلی آن بر پایه رنگ و ترکیب‌های هنری است. از پر، پرنده، گل، پروانه و حتی طرح‌های انتزاعی گرفته تا سیارات و مناظر، همگی در سبک آبرنگی زیبا و چشمگیر می‌شوند.
+
+از نظر درد، باید گفت که چون برای رسیدن به این افکت نیاز است چندین لایه رنگ روی پوست کار شود، میزان درد معمولاً متوسط رو به بالاست. در نواحی حساس یا پوست‌های نازک مثل مچ، ساعد داخلی یا پشت گوش درد بیشتر احساس می‌شود. همچنین اگر طرح بزرگ باشد، دستگاه مدت زمان بیشتری روی یک نقطه حرکت می‌کند و این موضوع باعث التهاب و سوزش بالاتر خواهد شد.
+
+            زمان اجرا نیز بسته به اندازه و جزئیات طرح تغییر می‌کند. برای یک طرح کوچک مثل یک گل پنج سانتی، معمولاً بین یک تا دو ساعت زمان نیاز است. طرح‌های متوسط مثل یک بخش کامل ساعد یا بازو سه تا پنج ساعت طول می‌کشد و اگر طرح خیلی بزرگ یا فول‌کالر باشد، حتی ممکن است به چند جلسه تقسیم شود
+   <div class="image-card fade-in"><img src="InShot_20250902_215125379.jpg" alt="نمونه کار 2"></div>.</p>
         <h3 class="fade-in">رئال</h3>
         <p class="fade-in">توضیح کامل درباره سبک رئال...</p>
     </div>
