--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 از نظر زمان اجرا هم دات‌ورک معمولاً طولانی‌تر است، چون ایجاد حجم و سایه با نقطه‌گذاری زمان بیشتری نسبت به کشیدن خطوط یا سایه‌زنی عادی می‌برد. بنابراین طرح‌های بزرگ در این سبک ممکن است نیاز به چند جلسه تتو داشته باشند.
 
         <div class="image-card fade-in"><img src="InShot_20250902_215125379.jpg" alt="نمونه کار 2"></div>
-_______________________________________________________
+_____________________________________________
 
  </p>
         <h3 class="fade-in">آبرنگی</h3>
@@ -210,8 +210,18 @@ _______________________________________________________
             زمان اجرا نیز بسته به اندازه و جزئیات طرح تغییر می‌کند. برای یک طرح کوچک مثل یک گل پنج سانتی، معمولاً بین یک تا دو ساعت زمان نیاز است. طرح‌های متوسط مثل یک بخش کامل ساعد یا بازو سه تا پنج ساعت طول می‌کشد و اگر طرح خیلی بزرگ یا فول‌کالر باشد، حتی ممکن است به چند جلسه تقسیم شود
   
         <div class="image-card fade-in"><img src="Watercolor-butterfly-tattoo-by-@plastic_tattoo.jpg.webp" alt="نمونه کار 2"></div>.</p>
-        <h3 class="fade-in">رئال</h3>
-        <p class="fade-in">توضیح کامل درباره سبک رئال...</p>
+     
+    <h3 class="fade-in">رئال</h3>
+        
+        <p class="fade-in">سبک رئال یا واقع‌گرایانه در تتو یکی از سخت‌ترین و پرجزئیات‌ترین سبک‌هاست. در این سبک، طرح روی پوست دقیقاً شبیه یک عکس یا تصویر واقعی اجرا می‌شود. هنرمند با استفاده از تکنیک‌های سایه‌زنی، حجم‌دهی و بازی با نور و کنتراست، تصویری زنده و طبیعی خلق می‌کند.
+
+رئالیسم می‌تواند هم به صورت سیاه و خاکستری اجرا شود و هم به شکل رنگی. در نوع سیاه و خاکستری، پرتره‌ها و اجسام با ظرافت و عمق بیشتری دیده می‌شوند. در نوع رنگی، نتیجه بیشتر شبیه نقاشی رنگ روغن یا یک تصویر چاپ‌شده است.
+
+این سبک بیشتر برای چهره‌ها، حیوانات، مناظر و حتی اشیای خاص استفاده می‌شود. به دلیل دقت بالا و نیاز به جزئیات ریز، اجرای آن بسیار زمان‌بر است. یک پرتره کوچک ممکن است چند ساعت طول بکشد و یک طرح بزرگ حتی به چند جلسه نیاز داشته باشد.
+
+از نظر درد، چون هنرمند باید لایه‌های متعددی از سایه و رنگ را روی پوست پیاده کند، شدت درد معمولاً متوسط تا زیاد است. به‌ویژه در نواحی حساس یا طرح‌های پرجزئیات، فرد باید آمادگی بیشتری برای تحمل درد و زمان طولانی داشته باشد
+
+        <div class="image-card fade-in"><img src="InShot_20250902_222834037.jpg" alt="نمونه کار 2"></div></p>
     </div>
 </section>
 
