--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ _____________________________________________
             زمان اجرا نیز بسته به اندازه و جزئیات طرح تغییر می‌کند. برای یک طرح کوچک مثل یک گل پنج سانتی، معمولاً بین یک تا دو ساعت زمان نیاز است. طرح‌های متوسط مثل یک بخش کامل ساعد یا بازو سه تا پنج ساعت طول می‌کشد و اگر طرح خیلی بزرگ یا فول‌کالر باشد، حتی ممکن است به چند جلسه تقسیم شود
   
         <div class="image-card fade-in"><img src="Watercolor-butterfly-tattoo-by-@plastic_tattoo.jpg.webp" alt="نمونه کار 2"></div>.</p>
-     
+_____________________________________________
     <h3 class="fade-in">رئال</h3>
         
         <p class="fade-in">سبک رئال یا واقع‌گرایانه در تتو یکی از سخت‌ترین و پرجزئیات‌ترین سبک‌هاست. در این سبک، طرح روی پوست دقیقاً شبیه یک عکس یا تصویر واقعی اجرا می‌شود. هنرمند با استفاده از تکنیک‌های سایه‌زنی، حجم‌دهی و بازی با نور و کنتراست، تصویری زنده و طبیعی خلق می‌کند.
@@ -222,6 +222,11 @@ _____________________________________________
 از نظر درد، چون هنرمند باید لایه‌های متعددی از سایه و رنگ را روی پوست پیاده کند، شدت درد معمولاً متوسط تا زیاد است. به‌ویژه در نواحی حساس یا طرح‌های پرجزئیات، فرد باید آمادگی بیشتری برای تحمل درد و زمان طولانی داشته باشد
 
         <div class="image-card fade-in"><img src="InShot_20250902_222834037.jpg" alt="نمونه کار 2"></div></p>
+_____________________________________________
+  <h3 class="fade-in">مینیمال</h3>    
+        <p class="fade-in">سبک مینیمال یکی از ساده‌ترین و در عین حال شیک‌ترین سبک‌های تتو است که بر اساس خطوط تمیز، شکل‌های ساده و جزئیات حداقلی طراحی می‌شود. هدف این سبک ایجاد طرحی کوچک و گویا با کمترین عناصر ممکن است. برخلاف سبک‌هایی مثل رئال یا آبرنگی که نیاز به سایه‌زنی یا رنگ‌های متعدد دارند، مینیمال بیشتر روی فرم، نماد و مفهوم تمرکز می‌کند و اغلب فقط با خطوط سیاه یا گاهی یک رنگ محدود اجرا می‌شود. طرح‌های مینیمال می‌توانند شامل نمادها، اشکال هندسی، حروف، علائم کوچک یا عناصر طبیعی ساده مثل ستاره، ماه، گل یا پر باشند. این سبک به دلیل سادگی و اندازه کوچک، معمولاً کمترین درد را ایجاد می‌کند و اجرای آن سریع است. یک تتوی کوچک مینیمال معمولاً بین پانزده تا چهل و پنج دقیقه طول می‌کشد و حتی در نواحی حساس بدن هم معمولاً درد زیادی ایجاد نمی‌شود. به‌خاطر سادگی و اندازه کوچک طرح‌ها، مراقبت بعد از تتوی مینیمال هم آسان‌تر است و احتمال اشتباه یا نیاز به اصلاح مجدد کمتر است. این سبک برای کسانی که دنبال تتوی ظریف، پنهان یا با مفهوم شخصی هستند بسیار مناسب است و می‌توان آن را تقریباً روی هر نقطه‌ای از بدن اجرا کرد.
+<div class="image-card fade-in"><img src="InShot_20250902_215125379.jpg" alt="نمونه کار 2"></div>
+</p>
     </div>
 </section>
 
