--- a/index.html
+++ b/index.html
@@ -225,8 +225,14 @@ _____________________________________________
 _____________________________________________
   <h3 class="fade-in">مینیمال</h3>    
         <p class="fade-in">سبک مینیمال یکی از ساده‌ترین و در عین حال شیک‌ترین سبک‌های تتو است که بر اساس خطوط تمیز، شکل‌های ساده و جزئیات حداقلی طراحی می‌شود. هدف این سبک ایجاد طرحی کوچک و گویا با کمترین عناصر ممکن است. برخلاف سبک‌هایی مثل رئال یا آبرنگی که نیاز به سایه‌زنی یا رنگ‌های متعدد دارند، مینیمال بیشتر روی فرم، نماد و مفهوم تمرکز می‌کند و اغلب فقط با خطوط سیاه یا گاهی یک رنگ محدود اجرا می‌شود. طرح‌های مینیمال می‌توانند شامل نمادها، اشکال هندسی، حروف، علائم کوچک یا عناصر طبیعی ساده مثل ستاره، ماه، گل یا پر باشند. این سبک به دلیل سادگی و اندازه کوچک، معمولاً کمترین درد را ایجاد می‌کند و اجرای آن سریع است. یک تتوی کوچک مینیمال معمولاً بین پانزده تا چهل و پنج دقیقه طول می‌کشد و حتی در نواحی حساس بدن هم معمولاً درد زیادی ایجاد نمی‌شود. به‌خاطر سادگی و اندازه کوچک طرح‌ها، مراقبت بعد از تتوی مینیمال هم آسان‌تر است و احتمال اشتباه یا نیاز به اصلاح مجدد کمتر است. این سبک برای کسانی که دنبال تتوی ظریف، پنهان یا با مفهوم شخصی هستند بسیار مناسب است و می‌توان آن را تقریباً روی هر نقطه‌ای از بدن اجرا کرد.
-<div class="image-card fade-in"><img src="InShot_20250902_215125379.jpg" alt="نمونه کار 2"></div>
+<div class="image-card fade-in"><img src="InShot_20250902_224742812.jpg" alt="نمونه کار 2"></div>
 </p>
+_____________________________________________
+  <h3 class="fade-in">میکرورئال</h3>    
+        <p class="fade-in">سبک میکرورئال شاخه‌ای از سبک رئال است که همه جزئیات و ویژگی‌های واقع‌گرایانه را در ابعاد بسیار کوچک و جمع‌وجور ارائه می‌دهد. هدف آن خلق تصویری دقیق و طبیعی روی پوست است، اما اندازه طرح معمولاً کوچک است و محدود به بخش‌های کوچک بدن می‌شود. برخلاف رئال سنتی که ممکن است یک پرتره کامل یا منظره بزرگ باشد، میکرورئال روی جزئیات کوچک مثل چهره‌ای کوچک، حیوانات کوچک، گل یا اشیای شخصی کار می‌کند و در عین حال حس واقعی بودن تصویر حفظ می‌شود.
+
+این سبک معمولاً با سیاه و خاکستری اجرا می‌شود، اما گاهی نسخه رنگی هم دارد. به دلیل اندازه کوچک طرح، اجرای آن نیاز به دقت بسیار بالا و دست هنرمند فوق‌العاده ماهر دارد تا جزئیات در مقیاس کوچک واضح و قابل تشخیص بمانند. از نظر درد، بسته به ناحیه بدن، معمولاً متوسط است، اما زمان اجرای هر طرح کوتاه‌تر از رئال بزرگ است و معمولاً بین سی دقیقه تا دو ساعت طول می‌کشد.</p>
+  
     </div>
 </section>
 
