--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ _____________________________________________
         <p class="fade-in">سبک میکرورئال شاخه‌ای از سبک رئال است که همه جزئیات و ویژگی‌های واقع‌گرایانه را در ابعاد بسیار کوچک و جمع‌وجور ارائه می‌دهد. هدف آن خلق تصویری دقیق و طبیعی روی پوست است، اما اندازه طرح معمولاً کوچک است و محدود به بخش‌های کوچک بدن می‌شود. برخلاف رئال سنتی که ممکن است یک پرتره کامل یا منظره بزرگ باشد، میکرورئال روی جزئیات کوچک مثل چهره‌ای کوچک، حیوانات کوچک، گل یا اشیای شخصی کار می‌کند و در عین حال حس واقعی بودن تصویر حفظ می‌شود.
 
 این سبک معمولاً با سیاه و خاکستری اجرا می‌شود، اما گاهی نسخه رنگی هم دارد. به دلیل اندازه کوچک طرح، اجرای آن نیاز به دقت بسیار بالا و دست هنرمند فوق‌العاده ماهر دارد تا جزئیات در مقیاس کوچک واضح و قابل تشخیص بمانند. از نظر درد، بسته به ناحیه بدن، معمولاً متوسط است، اما زمان اجرای هر طرح کوتاه‌تر از رئال بزرگ است و معمولاً بین سی دقیقه تا دو ساعت طول می‌کشد.</p>
-  
+  <div class="image-card fade-in"><img src="InShot_20250902_215125379.jpg" alt="نمونه کار 2"></div>
     </div>
 </section>
 
