--- a/index.html
+++ b/index.html
@@ -232,7 +232,16 @@ _____________________________________________
         <p class="fade-in">سبک میکرورئال شاخه‌ای از سبک رئال است که همه جزئیات و ویژگی‌های واقع‌گرایانه را در ابعاد بسیار کوچک و جمع‌وجور ارائه می‌دهد. هدف آن خلق تصویری دقیق و طبیعی روی پوست است، اما اندازه طرح معمولاً کوچک است و محدود به بخش‌های کوچک بدن می‌شود. برخلاف رئال سنتی که ممکن است یک پرتره کامل یا منظره بزرگ باشد، میکرورئال روی جزئیات کوچک مثل چهره‌ای کوچک، حیوانات کوچک، گل یا اشیای شخصی کار می‌کند و در عین حال حس واقعی بودن تصویر حفظ می‌شود.
 
 این سبک معمولاً با سیاه و خاکستری اجرا می‌شود، اما گاهی نسخه رنگی هم دارد. به دلیل اندازه کوچک طرح، اجرای آن نیاز به دقت بسیار بالا و دست هنرمند فوق‌العاده ماهر دارد تا جزئیات در مقیاس کوچک واضح و قابل تشخیص بمانند. از نظر درد، بسته به ناحیه بدن، معمولاً متوسط است، اما زمان اجرای هر طرح کوتاه‌تر از رئال بزرگ است و معمولاً بین سی دقیقه تا دو ساعت طول می‌کشد.</p>
-  <div class="image-card fade-in"><img src="InShot_20250902_215125379.jpg" alt="نمونه کار 2"></div>
+ 
+        <div class="image-card fade-in"><img src="InShot_20250902_225639146.jpg" alt="نمونه کار 2"></div>
+_____________________________________________
+<h3 class="fade-in">ژئومتریک</h3>   
+        
+        <p class="fade-in">سبک ژئومتریک یکی از سبک‌های مدرن و پرطرفدار تتو است که بر اساس اشکال هندسی، خطوط دقیق و تقارن طراحی می‌شود. در این سبک از مثلث، دایره، مربع، خطوط موازی و الگوهای تکرارشونده برای ایجاد طرح‌های زیبا و متقارن استفاده می‌شود. گاهی طرح‌ها ساده و مینیمال هستند و گاهی با جزئیات پیچیده و حجم‌دهی ترکیب می‌شوند تا جلوه‌ای سه‌بعدی پیدا کنند.
+
+این سبک معمولاً با رنگ مشکی یا ترکیب مشکی و سایه‌های خاکستری اجرا می‌شود، اما نسخه‌های رنگی هم دیده می‌شوند. سبک جیومتریک به دلیل دقت بالا و نیاز به خطوط کاملاً صاف و متقارن، اجرای آن به مهارت هنرمند وابسته است. از نظر درد، شدت آن معمولاً متوسط است و زمان اجرا به اندازه و پیچیدگی طرح بستگی دارد، یک طرح کوچک ممکن است کمتر از یک ساعت و طرح‌های بزرگ‌تر چندین ساعت طول بکشد.
+
+جیومتریک اغلب با سبک‌های دیگر مثل بلک‌ورک، مینیمال یا حتی رئال ترکیب می‌شود تا طرح‌هایی خلاقانه و هنری ایجاد کند و برای کسانی که دنبال تتویی مدرن، دقیق و سمبلیک هستند، بسیار مناسب است.</p>
     </div>
 </section>
 
