--- a/index.html
+++ b/index.html
@@ -242,6 +242,10 @@ _____________________________________________
 این سبک معمولاً با رنگ مشکی یا ترکیب مشکی و سایه‌های خاکستری اجرا می‌شود، اما نسخه‌های رنگی هم دیده می‌شوند. سبک جیومتریک به دلیل دقت بالا و نیاز به خطوط کاملاً صاف و متقارن، اجرای آن به مهارت هنرمند وابسته است. از نظر درد، شدت آن معمولاً متوسط است و زمان اجرا به اندازه و پیچیدگی طرح بستگی دارد، یک طرح کوچک ممکن است کمتر از یک ساعت و طرح‌های بزرگ‌تر چندین ساعت طول بکشد.
 
 جیومتریک اغلب با سبک‌های دیگر مثل بلک‌ورک، مینیمال یا حتی رئال ترکیب می‌شود تا طرح‌هایی خلاقانه و هنری ایجاد کند و برای کسانی که دنبال تتویی مدرن، دقیق و سمبلیک هستند، بسیار مناسب است.</p>
+
+ <div class="image-card fade-in"><img src="InShot_20250902_230528570.jpg" alt="نمونه کار 2"></div>
+_____________________________________________
+        
     </div>
 </section>
 
