--- a/index.html
+++ b/index.html
@@ -245,7 +245,18 @@ _____________________________________________
 
  <div class="image-card fade-in"><img src="InShot_20250902_230528570.jpg" alt="نمونه کار 2"></div>
 _____________________________________________
-        
+<h3 class="fade-in">بلک وُرک</h3>
+   
+    <p class="fade-in">سبک بلک‌ورک  یکی از سبک‌های برجسته و گرافیکی تتو است که همه یا بخش عمده طرح با رنگ مشکی خالص اجرا می‌شود. در این سبک از خطوط ضخیم، پر کردن کامل فضاها با مشکی و ایجاد الگوهای هندسی، انتزاعی یا سمبلیک استفاده می‌شود. طرح‌ها می‌توانند شامل الگوهای تکرارشونده، نقش‌های قبیله‌ای، اشکال هندسی یا ترکیب با نمادهای مدرن باشند و گاهی حتی کل یک بخش بدن به صورت کامل با مشکی پر می‌شود.
+
+این سبک به دلیل استفاده گسترده از رنگ مشکی و حجم‌دهی با سایه و خطوط، جلوه‌ای قدرتمند و چشمگیر دارد. از نظر درد، چون بخش زیادی از پوست باید با رنگ مشکی پر شود، معمولاً متوسط تا زیاد است و زمان اجرا به وسعت و پیچیدگی طرح بستگی دارد؛ طرح‌های کوچک ممکن است حدود یک تا دو ساعت و طرح‌های بزرگ چند جلسه طول بکشند.
+
+بلک‌ورک به خاطر سادگی رنگ و قدرت بصری بالا، با سبک‌های دیگر مثل جیومتریک، مینیمال یا حتی نئوترادی‌شنال ترکیب می‌شود تا طرح‌هایی مدرن و هنری ایجاد کند و برای کسانی که دنبال تتویی چشمگیر، گرافیکی و با مفهوم قوی هستند، بسیار مناسب است.
+
+  <div class="image-card fade-in"><img src="InShot_20250902_233731421.jpg" alt="نمونه کار 2"></div>
+_____________________________________________
+    </p>
+    
     </div>
 </section>
 
