--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
 این سبک معمولاً با رنگ مشکی خالص اجرا می‌شود و خبری از رنگ‌های روشن یا سایه‌زنی پیچیده نیست. طرح‌ها می‌توانند کوچک و ساده باشند یا بزرگ و تمام‌قسمتی، مثلاً بازو، ساعد، قفسه سینه یا پشت بدن را پوشش دهند. از نظر درد، بسته به وسعت طرح و ناحیه بدن، معمولاً متوسط تا زیاد است و زمان اجرا به اندازه طرح بستگی دارد؛ طرح‌های کوچک ممکن است کمتر از یک ساعت و طرح‌های بزرگ چندین جلسه طول بکشند.
 
 ترایبال به دلیل ظاهر گرافیکی و معنای سمبلیک، اغلب با سبک‌های دیگر مثل بلک‌ورک یا جیومتریک ترکیب می‌شود و برای کسانی که دنبال تتوهایی قدرتمند، کلاسیک و معنا‌دار هستند، بسیار مناسب است.
-
-
+            
+<div class="image-card fade-in"><img src="InShot_20250902_234603021.jpg" alt="نمونه کار 2"></div>
 
 </p>
     </div>
