--- a/index.html
+++ b/index.html
@@ -266,11 +266,13 @@
 <div class="image-card fade-in"><img src="InShot_20250902_234603021.jpg" alt="نمونه کار 2"></div>
 
 </p>
-          <h3 class="fade-in">Old School</h3>   
+ <h3 class="fade-in">Old School</h3>   
         <p class="fade-in">سبک اولد اسکول (Old School) که به آن ترادی‌شنال کلاسیک هم گفته می‌شود، یکی از قدیمی‌ترین و پایه‌ای‌ترین سبک‌های تتو است و ریشه آن به دهه‌های اول قرن بیستم در آمریکا برمی‌گردد. این سبک به خاطر خطوط ضخیم و مشخص، رنگ‌های محدود و زنده و طراحی ساده و قابل فهم شناخته می‌شود. طرح‌ها معمولاً با خطوط سیاه ضخیم مرز بندی می‌شوند و رنگ‌های اصلی و پررنگ مثل قرمز، سبز، آبی و زرد در آنها به کار می‌رود. سایه‌زنی در این سبک کم یا تقریباً بدون سایه است و تمرکز بیشتر روی سادگی و وضوح طرح است. طرح‌های متداول شامل گل، قلب، عقاب، دلقک، کشتی و نمادهای دریایی هستند و به دلیل جلوه کلاسیک و ماندگاری بالای رنگ‌ها، هنوز هم بین تتوکاران و مشتریان محبوب هستند. از نظر درد و زمان اجرا، بسته به سایز طرح، معمولاً متوسط و نسبتاً سریع است و برای طرح‌های کوچک یک ساعت یا کمتر طول می‌کشد و طرح‌های بزرگ‌تر ممکن است چند جلسه طول بکشد.
 <div class="image-card fade-in"><img src="InShot_20250903_000257501.jpg" alt="نمونه کار 2"></div>
 </p>
-        
+ <h3 class="fade-in">نئوترایبال</h3>
+      <p class="fade-in">سبک نئوترایبال نسخه مدرن و به‌روز سبک ترایبال است که ریشه آن به فرهنگ‌ها و قبایل باستانی بازمی‌گردد. در این سبک از الگوهای سیاه و پررنگ، خطوط خمیده و زاویه‌دار و طراحی‌های تکرارشونده استفاده می‌شود، اما تفاوتش با ترایبال سنتی در این است که با تکنیک‌های مدرن، جزئیات بیشتر و خلاقیت هنری اجرا می‌شود. طرح‌ها می‌توانند کوچک و ساده یا بزرگ و تمام‌قسمتی باشند و معمولاً معانی سمبلیک مثل قدرت، محافظت یا هویت فرهنگی دارند. این سبک به دلیل ظاهر گرافیکی و پررنگ، جلوه‌ای قدرتمند دارد و اغلب با سبک‌های دیگر مثل بلک‌ورک یا جیومتریک ترکیب می‌شود. شدت درد و زمان اجرا بسته به اندازه و ناحیه بدن متغیر است؛ طرح‌های کوچک ممکن است کمتر از یک ساعت و طرح‌های بزرگ چندین جلسه طول بکشد.
+      <div class="image-card fade-in"><img src="IMG_20250816_213546_353.jpg" alt="نمونه کار 2"></div></p>
     </div>
 </section>
 
