--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 </p>
  <h3 class="fade-in">نئوترایبال</h3>
       <p class="fade-in">سبک نئوترایبال نسخه مدرن و به‌روز سبک ترایبال است که ریشه آن به فرهنگ‌ها و قبایل باستانی بازمی‌گردد. در این سبک از الگوهای سیاه و پررنگ، خطوط خمیده و زاویه‌دار و طراحی‌های تکرارشونده استفاده می‌شود، اما تفاوتش با ترایبال سنتی در این است که با تکنیک‌های مدرن، جزئیات بیشتر و خلاقیت هنری اجرا می‌شود. طرح‌ها می‌توانند کوچک و ساده یا بزرگ و تمام‌قسمتی باشند و معمولاً معانی سمبلیک مثل قدرت، محافظت یا هویت فرهنگی دارند. این سبک به دلیل ظاهر گرافیکی و پررنگ، جلوه‌ای قدرتمند دارد و اغلب با سبک‌های دیگر مثل بلک‌ورک یا جیومتریک ترکیب می‌شود. شدت درد و زمان اجرا بسته به اندازه و ناحیه بدن متغیر است؛ طرح‌های کوچک ممکن است کمتر از یک ساعت و طرح‌های بزرگ چندین جلسه طول بکشد.
-      <div class="image-card fade-in"><img src="IMG_20250816_213546_353.jpg" alt="نمونه کار 2"></div></p>
+      <div class="image-card fade-in"><img src="InShot_20250903_001510011.jpg" alt="نمونه کار 2"></div></p>
     </div>
 </section>
 
