--- a/index.html
+++ b/index.html
@@ -273,6 +273,10 @@
  <h3 class="fade-in">نئوترایبال</h3>
       <p class="fade-in">سبک نئوترایبال نسخه مدرن و به‌روز سبک ترایبال است که ریشه آن به فرهنگ‌ها و قبایل باستانی بازمی‌گردد. در این سبک از الگوهای سیاه و پررنگ، خطوط خمیده و زاویه‌دار و طراحی‌های تکرارشونده استفاده می‌شود، اما تفاوتش با ترایبال سنتی در این است که با تکنیک‌های مدرن، جزئیات بیشتر و خلاقیت هنری اجرا می‌شود. طرح‌ها می‌توانند کوچک و ساده یا بزرگ و تمام‌قسمتی باشند و معمولاً معانی سمبلیک مثل قدرت، محافظت یا هویت فرهنگی دارند. این سبک به دلیل ظاهر گرافیکی و پررنگ، جلوه‌ای قدرتمند دارد و اغلب با سبک‌های دیگر مثل بلک‌ورک یا جیومتریک ترکیب می‌شود. شدت درد و زمان اجرا بسته به اندازه و ناحیه بدن متغیر است؛ طرح‌های کوچک ممکن است کمتر از یک ساعت و طرح‌های بزرگ چندین جلسه طول بکشد.
       <div class="image-card fade-in"><img src="InShot_20250903_001510011.jpg" alt="نمونه کار 2"></div></p>
+<h3 class="fade-in">Fine art</h3>
+        <p class="fade-in">سبک فاین آرت (Fine Art Tattoo) یکی از خلاقانه‌ترین و هنری‌ترین سبک‌های تتو است که تمرکز آن روی خلق تتویی شبیه آثار هنری واقعی روی پوست است. برخلاف سبک‌های کلاسیک یا سنتی، فاین آرت به دنبال بیان هنری، جزئیات ظریف و خلاقیت منحصر به فرد است و اغلب طرح‌ها از آثار نقاشان کلاسیک یا مدرن الهام می‌گیرند. این سبک با جزئیات دقیق و پیچیده، سایه‌زنی ظریف و رنگ‌بندی هنرمندانه شناخته می‌شود و می‌تواند هم به صورت رنگی و هم سیاه و سفید اجرا شود. طرح‌ها معمولاً منحصر به فرد و سفارشی هستند و از قالب‌های آماده استفاده نمی‌شود. فاین آرت می‌تواند با سبک‌هایی مثل رئال، آبرنگی یا مینیمال ترکیب شود تا جلوه‌ای خلاقانه و مدرن ایجاد کند و برای کسانی که می‌خواهند تتویی شبیه یک اثر هنری واقعی روی پوستشان داشته باشند، بسیار مناسب است. به دلیل دقت بالا و جزئیات فراوان، اجرای آن معمولاً زمان‌بر است و نیازمند مهارت بالای هنرمند می‌باشد.
+
+<div class="image-card fade-in"><img src="sofia-tattoo-1667x1200.jpg" alt="نمونه کار 2"></div></p>
     </div>
 </section>
 
