--- a/index.html
+++ b/index.html
@@ -180,6 +180,10 @@
 <section id="styles">
     <h2>سبک‌های تتو</h2>
     <div>
+      <h3 class="fade-in">پَچ و استیکر</h3>
+        <p class="fade-in">سبک پچ و استیکر (Patch & Sticker Tattoo) یک سبک مدرن و فانتزی تتو است که شبیه برچسب یا پچ‌های لباس روی پوست به نظر می‌رسد، اما باید توجه داشت که واقعی نیست و دوخته یا چسبانده نشده است. در این سبک طرح‌ها معمولاً با خطوط مشخص و رنگ‌های پررنگ اجرا می‌شوند و ظاهرشان دو بعدی و کارتونی است، گویی روی پوست چسبانده شده‌اند. استفاده از رنگ‌های روشن و شاد، خطوط واضح و مرزهای مشخص باعث می‌شود طرح کاملاً شبیه یک پچ واقعی به نظر برسد. طرح‌ها اغلب کوچک و فانتزی هستند و می‌توانند شامل شخصیت‌ها، نمادها، اشیای کارتونی یا عناصر گرافیکی باشند. این سبک برای کسانی که دنبال تتوهای جذاب، سرگرم‌کننده و خلاقانه هستند مناسب است و به دلیل اندازه کوچک و سادگی طرح، زمان اجرا کوتاه و درد معمولاً متوسط تا کم است.
+
+<div class="image-card fade-in"><img src="InShot_20250903_002529592.jpg" alt="نمونه کار 2"></div></p>
         <h3 class="fade-in">دات و‌ُرک </h3>
         <p class="fade-in"> 
 
