--- a/index.html
+++ b/index.html
@@ -281,6 +281,42 @@
         <p class="fade-in">سبک فاین آرت (Fine Art Tattoo) یکی از خلاقانه‌ترین و هنری‌ترین سبک‌های تتو است که تمرکز آن روی خلق تتویی شبیه آثار هنری واقعی روی پوست است. برخلاف سبک‌های کلاسیک یا سنتی، فاین آرت به دنبال بیان هنری، جزئیات ظریف و خلاقیت منحصر به فرد است و اغلب طرح‌ها از آثار نقاشان کلاسیک یا مدرن الهام می‌گیرند. این سبک با جزئیات دقیق و پیچیده، سایه‌زنی ظریف و رنگ‌بندی هنرمندانه شناخته می‌شود و می‌تواند هم به صورت رنگی و هم سیاه و سفید اجرا شود. طرح‌ها معمولاً منحصر به فرد و سفارشی هستند و از قالب‌های آماده استفاده نمی‌شود. فاین آرت می‌تواند با سبک‌هایی مثل رئال، آبرنگی یا مینیمال ترکیب شود تا جلوه‌ای خلاقانه و مدرن ایجاد کند و برای کسانی که می‌خواهند تتویی شبیه یک اثر هنری واقعی روی پوستشان داشته باشند، بسیار مناسب است. به دلیل دقت بالا و جزئیات فراوان، اجرای آن معمولاً زمان‌بر است و نیازمند مهارت بالای هنرمند می‌باشد.
 
 <div class="image-card fade-in"><img src="sofia-tattoo-1667x1200.jpg" alt="نمونه کار 2"></div></p>
+      <h3 class="fade-in">سبک های دیگر</h3>
+        <p class="fade-in">1. نو اسکول (New School): سبک کارتونی و فانتزی با رنگ‌های روشن، طرح‌های اغراق‌شده و الهام از کمیک و انیمیشن.
+
+
+2. سکیولار (Sculptural / Sculptural Realism): خلق طرح‌هایی با عمق و حجم شبیه مجسمه یا تندیس روی پوست.
+
+
+3. ماندالا (Mandala): الگوهای دایره‌ای و هندسی با جزئیات بالا، الهام گرفته از هنر هند و بودایی.
+
+
+4. اسپلتر یا اسپلاش (Splatter / Splash): شبیه رنگ‌پاشی یا لکه‌های رنگ روی پوست، اغلب با سبک آبرنگی ترکیب می‌شود.
+
+
+5. لاین ورک (Linework): تمرکز روی خطوط دقیق، بدون سایه‌زنی یا رنگ زیاد، گاهی با هندسه یا الگوهای مینیمال ترکیب می‌شود.
+
+
+6. گرافیکی (Graphic): استفاده از خطوط تیز، اشکال انتزاعی و ترکیب‌های خلاقانه شبیه طراحی گرافیک.
+
+
+7. سایبورگ یا تکنولوژیک (Biomechanical / Cyberpunk): طراحی‌هایی که المان‌های رباتیک، مکانیکی یا آینده‌نگر را شبیه‌سازی می‌کنند، معمولاً با جزئیات زیاد و عمق سه‌بعدی.
+
+
+8. نوایژ (Neo-Japanese): نسخه مدرن سبک ژاپنی سنتی با رنگ‌های روشن‌تر، جزئیات هنری بیشتر و آزادی خلاقیت.
+
+
+9. بلوپرینت (Blueprint / Technical): طرح‌هایی شبیه نقشه‌های مهندسی یا طراحی فنی، با خطوط دقیق و نمودارگونه.
+
+
+10. تایپوگرافی (Typography / Script): تمرکز روی حروف، نوشته‌ها و فونت‌های هنری به جای تصویر.
+
+
+11. اسکچ یا طراحی خطی آزاد (Sketch / Sketch Style): طرح‌هایی شبیه نقاشی دستی یا اسکچ با خطوط ناپیوسته و ظاهر نیمه‌تمام، ظاهری هنری و پویا.
+
+
+12. فانتزی و سوررئال (Fantasy / Surrealism): طراحی با المان‌های خیال‌پردازانه، غیرواقعی یا سوررئال که می‌تواند ترکیبی از رنگ و سایه باشد.
+</p>
     </div>
 </section>
 
