--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 </style>
 </head>
-    
+    <script src="مسیر-فایل/back-to-top.js"></script>
 <body>
 
 <header>
@@ -380,6 +380,6 @@ document.querySelectorAll('.image-card img').forEach(img=>{
 overlay.addEventListener('click',()=>{ overlay.style.display='none'; });
 
 </script>
-
+<script src="مسیر-فایل/back-to-top.js"></script>
 </body>
 </html>
