--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 </style>
 </head>
-    <script src="مسیر-فایل/back-to-top.js"></script>
+    <script src="Code.html/back-to-top.js"></script>
 <body>
 
 <header>
@@ -377,9 +377,9 @@ document.querySelectorAll('.image-card img').forEach(img=>{
         overlayImg.src=img.src;
     });
 });
-overlay.addEventListener('click',()=>{ overlay.style.display='none'; });
+overlay.addEvesrc="Code.html/back-to-top.js"></script>ntListener('click',()=>{ overlay.style.display='none'; });
 
 </script>
-<script src="مسیر-فایل/back-to-top.js"></script>
+<script 
 </body>
 </html>
