--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
         <div class="image-card fade-in"><img src="IMG_20250825_111019_587.jpg" alt="نمونه کار 1"></div>
         <div class="image-card fade-in"><img src="IMG_20250816_213546_353.jpg" alt="نمونه کار 2"></div>
         <div class="image-card fade-in"><img src="InShot_20250818_215950717.jpg" alt="نمونه کار 3"></div>
-        <div class="image-card fade-in"><img src="" alt="نمونه کار 1"></div>
-        <div class="image-card fade-in"><img src="" alt="نمونه کار 2"></div>
-        <div class="image-card fade-in"><img src="" alt="نمونه کار 3"></div>
-        <div class="image-card fade-in"><img src="" alt="نمونه کار 1"></div>
+        <div class="image-card fade-in"><img src="1755415200364.jpg" alt="نمونه کار 1"></div>
+        <div class="image-card fade-in"><img src="1755415917519.jpg" alt="نمونه کار 2"></div>
+        <div class="image-card fade-in"><img src="IMG_20250818_205900_264.jpg" alt="نمونه کار 3"></div>
+        <div class="image-card fade-in"><img src="IMG_20250818_205921_508.jpg" alt="نمونه کار 1"></div>
         <div class="image-card fade-in"><img src="" alt="نمونه کار 2"></div>
         <div class="image-card fade-in"><img src="" alt="نمونه کار 3"></div>
     </div>
