--- a/index.html
+++ b/index.html
@@ -179,9 +179,13 @@
         <div class="image-card fade-in"><img src="1755415917519.jpg" alt="نمونه کار 2"></div>
         <div class="image-card fade-in"><img src="IMG_20250818_205900_264.jpg" alt="نمونه کار 3"></div>
         <div class="image-card fade-in"><img src="IMG_20250818_205921_508.jpg" alt="نمونه کار 1"></div>
-        <div class="image-card fade-in"><img src="" alt="نمونه کار 2"></div>
-        <div class="image-card fade-in"><img src="" alt="نمونه کار 3"></div>
-    </div>
+        <div class="image-card fade-in"><img src="IMG_20250820_125329_112.jpg" alt="نمونه کار 2"></div>
+        <div class="image-card fade-in"><img src="IMG_20250820_130156_967.jpg" alt="نمونه کار 3"></div>
+        <div class="image-card fade-in"><img src="IMG_20250820_130252_332.jpg" alt="نمونه کار 2"></div>
+        <div class="image-card fade-in"><img src="IMG_20250820_130310_940.jpg" alt="نمونه کار 2"></div>
+        <div class="image-card fade-in"><img src="IMG_20250820_130322_416.jpg" alt="نمونه کار 2"></div>
+        <div class="image-card fade-in"><img src="InShot_20250820_123715906.jpg" alt="نمونه کار 2"></div>
+     </div>
 </section>
 
 <section id="styles">
